Fixed overlapping of text and logo in about section

--- a/index.css
+++ b/index.css
@@ -468,7 +468,6 @@ html {
     }
     .logo-div {
         margin: 0;
-        padding: 0 50px;
         text-align: center;
     }
     .logo-div img {
